# test_translate

./: .dockerignore  123456  123456.pub  Dockerfile  README.md  pyproject.toml
scripts/: __init__.py  translate_video.py
translate_agent/: __init__.py  audio.py  config.py  pipeline.py  subtitles.py  transcription.py  translation.py  tts.py  types.py  video.py
